[gd_scene load_steps=3 format=3 uid="uid://c1yjlpu62j7y"]

[ext_resource type="Script" uid="uid://b8370inwsomfd" path="res://scripts/LevelSelect.gd" id="1_08w81"]
[ext_resource type="Texture2D" uid="uid://bn6fex3nwh4v5" path="res://assets/ui/background.svg" id="2_qokr0"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_08w81")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qokr0")
expand_mode = 1

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.5
offset_top = 80.0
offset_right = 133.5
offset_bottom = 142.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Level Select"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -100.0
offset_right = 400.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelGrid" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 5

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -100.0
offset_right = 40.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
